--- a/src/Pages/About/About.scss
+++ b/src/Pages/About/About.scss
@@ -6,6 +6,7 @@
 	width: 70%;
 	margin: 1rem auto;
 	align-items: center;
+	padding: 0; /* Ajouté pour éviter les décalages de padding */
 }
 
 @media screen and (max-width: 550px) {
